--- a/CSS/code/bg/style.css
+++ b/CSS/code/bg/style.css
@@ -1,4 +1,5 @@
-@import url('./October\ Crow.ttf');
+@import url('https://fonts.googleapis.com/css2?family=Baskervville+SC&display=swap');
+
 body
 {
 background-image: url('https://images.ctfassets.net/hrltx12pl8hq/01rJn4TormMsGQs1ZRIpzX/16a1cae2440420d0fd0a7a9a006f2dcb/Artboard_Copy_231.jpg?fit=fill&w=600&h=600');
@@ -7,7 +8,20 @@ background-position:center center;
 background-size:cover;
 color:white;
 height: 100vh;
-  font-family: 'October\ Crow',fantasy;
+    font-family: "Baskervville SC", serif;
   font-weight: 400;
-  font-style:normal;
+  font-style: normal;
+}
+
+.div
+{
+  font-size: 40px;
+}
+.heading{
+  color: rgb(255, 0, 0);
+  font-size: 1.5rem;
+}
+img{
+  height: 50%;
+  width: 50vw;
 }
